# SheetCheck

./: .gitignore  .mcp.json  CLAUDE.md  ISSUE.md  PRD.md  README.md  USE_CASES.md  pyproject.toml  results.json  settings.json  start-puppeteer-mcp.sh
.claude/: settings.json
.github/workflows/: ci.yml
baselines/: README.md
reports/: results.json  results.md  results.xml
rules/: default.yaml
scripts/: issue_command.py
src/: cli.py
src/data/: __init__.py  data_diff_rule.py  data_rule.py  ge_adapter.py
src/reporter/: __init__.py  base.py  factory.py  json_reporter.py  markdown_reporter.py  xml_reporter.py
src/structural/: __init__.py  base.py  conditional.py  formula.py  object_pos.py  sheet_exists.py
src/validator/: cli.py  config.py
src/visual/: capture.py  capture_com.py  capture_mcp.py  pixel_diff.py
tests/: test_cli.py
tests/config/: test_yaml_parser.py
tests/data/: __init__.py  test_data_diff.py  test_ge_adapter.py  test_non_null_rule.py
tests/fixtures/: SHAPES_README.md  cf_missing.xlsx  cf_ok.xlsx  data_null_bad.xlsx  data_sample.xlsx  formula_match.xlsx  formula_mismatch.xlsx  good_sheet.xlsx  missing_sheet.xlsx  new_small_changed.xlsx  obj_moved.xlsx  old_small.xlsx  rule_cf.yaml  rule_data_non_null.yaml  rule_diff.yaml  rule_formula.yaml  rule_obj.yaml  rule_sheet.yaml
tests/reporter/: __init__.py  test_factory.py  test_integration.py  test_json_reporter.py  test_markdown_reporter.py  test_xml_reporter.py
tests/structural/: test_cf_rule.py  test_formula_rule.py  test_object_rule.py  test_sheet_exists.py
tools/: render_html.js
(+6 files in other folders)
